{
  "version": 4,
  "terraform_version": "1.1.3",
  "serial": 313,
  "lineage": "73df59fa-7860-ac30-0bec-ad852cb2baa2",
  "resources": [
    {
      "mode": "data",
      "type": "aws_subnet",
      "name": "ws_vpc_subnets",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "subnet-0c2d9882f68e15805",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:997819012307:subnet/subnet-0c2d9882f68e15805",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "available_ip_address_count": 251,
            "cidr_block": "10.173.1.0/24",
            "default_for_az": false,
            "id": "subnet-0c2d9882f68e15805",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "997819012307",
            "state": "available",
            "tags": {
              "Name": "pci-subnet-1",
              "Owner": "ricardo.portilla@databricks.com",
              "user": "ricardo"
            },
            "vpc_id": "vpc-0a0c110881f1c1367"
          }
        },
        {
          "index_key": "subnet-0c3544336fe516333",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:997819012307:subnet/subnet-0c3544336fe516333",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "available_ip_address_count": 251,
            "cidr_block": "10.173.2.0/24",
            "default_for_az": false,
            "id": "subnet-0c3544336fe516333",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "997819012307",
            "state": "available",
            "tags": {
              "Name": "pci-subnet-2",
              "Owner": "ricardo.portilla@databricks.com",
              "user": "ricardo"
            },
            "vpc_id": "vpc-0a0c110881f1c1367"
          }
        }
      ]
    },
    {
      "mode": "data",
      "type": "aws_vpc",
      "name": "prod",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:997819012307:vpc/vpc-0a0c110881f1c1367",
            "cidr_block": "10.173.0.0/16",
            "cidr_block_associations": [
              {
                "association_id": "vpc-cidr-assoc-0cdb5184596763d42",
                "cidr_block": "10.173.0.0/16",
                "state": "associated"
              }
            ],
            "default": false,
            "dhcp_options_id": "dopt-dc1f11b8",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-0a0c110881f1c1367",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-03456fba414f1fdd0",
            "owner_id": "997819012307",
            "state": "available",
            "tags": {
              "Name": "e2-cert-workspace-vpc-donotdelete",
              "Owner": "abhinav.garg@databricks.com",
              "name": "e2-cert-workspace-vpc-donotdelete",
              "owner": "e2-certification@databricks.com"
            }
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:997819012307:route-table/rtb-0f58051f77be72cef",
            "id": "rtb-0f58051f77be72cef",
            "owner_id": "997819012307",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "private-link-ws-vpc-0a0c110881f1c1367-pl-local-route-tbl",
              "Owner": "abhinav.garg@databricks.com",
              "name": "e2-cert-workspace-vpc-donotdelete",
              "owner": "e2-certification@databricks.com"
            },
            "tags_all": {
              "Name": "private-link-ws-vpc-0a0c110881f1c1367-pl-local-route-tbl",
              "Owner": "abhinav.garg@databricks.com",
              "name": "e2-cert-workspace-vpc-donotdelete",
              "owner": "e2-certification@databricks.com"
            },
            "vpc_id": "vpc-0a0c110881f1c1367"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_vpc.prod"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "dataplane_vpce_rtb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-001c54e4999160adb",
            "route_table_id": "rtb-0f58051f77be72cef",
            "subnet_id": "subnet-09713085727dba93f"
          },
          "dependencies": [
            "aws_route_table.this",
            "aws_subnet.dataplane_vpce",
            "data.aws_vpc.prod"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "dataplane_vpce",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:997819012307:security-group/sg-08f5f8c254d6dd442",
            "description": "Security group shared with relay and workspace endpoints",
            "egress": [
              {
                "cidr_blocks": [
                  "10.173.255.128/28",
                  "10.173.1.0/24",
                  "10.173.2.0/24"
                ],
                "description": "Outbound rules",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "10.173.255.128/28",
                  "10.173.1.0/24",
                  "10.173.2.0/24"
                ],
                "description": "Outbound rules",
                "from_port": 6666,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 6666
              }
            ],
            "id": "sg-08f5f8c254d6dd442",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.173.255.128/28",
                  "10.173.1.0/24",
                  "10.173.2.0/24"
                ],
                "description": "Inbound rules",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "10.173.255.128/28",
                  "10.173.1.0/24",
                  "10.173.2.0/24"
                ],
                "description": "Inbound rules",
                "from_port": 6666,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 6666
              }
            ],
            "name": "Data Plane VPC endpoint security group",
            "name_prefix": "",
            "owner_id": "997819012307",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "private-link-ws-vpc-0a0c110881f1c1367-pl-vpce-sg-rules",
              "Owner": "abhinav.garg@databricks.com",
              "name": "e2-cert-workspace-vpc-donotdelete",
              "owner": "e2-certification@databricks.com"
            },
            "tags_all": {
              "Name": "private-link-ws-vpc-0a0c110881f1c1367-pl-vpce-sg-rules",
              "Owner": "abhinav.garg@databricks.com",
              "name": "e2-cert-workspace-vpc-donotdelete",
              "owner": "e2-certification@databricks.com"
            },
            "timeouts": null,
            "vpc_id": "vpc-0a0c110881f1c1367"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_subnet.ws_vpc_subnets",
            "data.aws_vpc.prod"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "dataplane_vpce",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:997819012307:subnet/subnet-09713085727dba93f",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.173.255.128/28",
            "id": "subnet-09713085727dba93f",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "997819012307",
            "tags": {
              "Name": "private-link-ws-vpc-0a0c110881f1c1367-pl-vpce",
              "Owner": "abhinav.garg@databricks.com",
              "name": "e2-cert-workspace-vpc-donotdelete",
              "owner": "e2-certification@databricks.com"
            },
            "tags_all": {
              "Name": "private-link-ws-vpc-0a0c110881f1c1367-pl-vpce",
              "Owner": "abhinav.garg@databricks.com",
              "name": "e2-cert-workspace-vpc-donotdelete",
              "owner": "e2-certification@databricks.com"
            },
            "vpc_id": "vpc-0a0c110881f1c1367"
          },
          "dependencies": [
            "data.aws_vpc.prod"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "backend_rest",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:997819012307:vpc-endpoint/vpce-0cb3ffc84841092a8",
            "dns_entry": [
              {
                "dns_name": "vpce-0cb3ffc84841092a8-55ptmv57.vpce-svc-09143d1e626de2f04.us-east-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z7HUB22UULQXV"
              },
              {
                "dns_name": "vpce-0cb3ffc84841092a8-55ptmv57-us-east-1c.vpce-svc-09143d1e626de2f04.us-east-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z7HUB22UULQXV"
              }
            ],
            "id": "vpce-0cb3ffc84841092a8",
            "network_interface_ids": [
              "eni-0b07bf4ef64004ba2"
            ],
            "owner_id": "997819012307",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}]}",
            "private_dns_enabled": false,
            "requester_managed": false,
            "security_group_ids": [
              "sg-08f5f8c254d6dd442"
            ],
            "service_name": "com.amazonaws.vpce.us-east-1.vpce-svc-09143d1e626de2f04",
            "state": "pendingAcceptance",
            "subnet_ids": [
              "subnet-09713085727dba93f"
            ],
            "vpc_endpoint_type": "Interface",
            "vpc_id": "vpc-0a0c110881f1c1367"
          },
          "dependencies": [
            "aws_security_group.dataplane_vpce",
            "aws_subnet.dataplane_vpce",
            "data.aws_subnet.ws_vpc_subnets",
            "data.aws_vpc.prod"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "relay",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:997819012307:vpc-endpoint/vpce-08eb013a69f29544a",
            "dns_entry": [
              {
                "dns_name": "vpce-08eb013a69f29544a-3x1tyjgf.vpce-svc-00018a8c3ff62ffdf.us-east-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z7HUB22UULQXV"
              },
              {
                "dns_name": "vpce-08eb013a69f29544a-3x1tyjgf-us-east-1c.vpce-svc-00018a8c3ff62ffdf.us-east-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z7HUB22UULQXV"
              }
            ],
            "id": "vpce-08eb013a69f29544a",
            "network_interface_ids": [
              "eni-06066ae543bc30031"
            ],
            "owner_id": "997819012307",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}]}",
            "private_dns_enabled": false,
            "requester_managed": false,
            "security_group_ids": [
              "sg-08f5f8c254d6dd442"
            ],
            "service_name": "com.amazonaws.vpce.us-east-1.vpce-svc-00018a8c3ff62ffdf",
            "state": "pendingAcceptance",
            "subnet_ids": [
              "subnet-09713085727dba93f"
            ],
            "vpc_endpoint_type": "Interface",
            "vpc_id": "vpc-0a0c110881f1c1367"
          },
          "dependencies": [
            "aws_security_group.dataplane_vpce",
            "aws_subnet.dataplane_vpce",
            "data.aws_subnet.ws_vpc_subnets",
            "data.aws_vpc.prod"
          ]
        }
      ]
    }
  ]
}